compiler/testData/compileKotlinAgainstCustomBinaries/classfileWithoutConstructors/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/classfileWithoutConstructors/shouldNotCompile.kt:6:9: error: unresolved reference: TopLevelKt
        TopLevelKt() // error here
        ^^^^^^^^^^
COMPILATION_ERROR
